k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      serviceAccountName: dean-eks-service-account
      containers:
      - name: hello
        image: 692609349536.dkr.ecr.ap-northeast-2.amazonaws.com/dynamodb-example:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 1
            memory: 2G
          limits:
            cpu: 1
            memory: 2G
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 100
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 100
          timeoutSeconds: 3
      terminationGracePeriodSeconds: 5
